css/style.css
@import url(reset.css);

:root {
	/* Variables */

	/* Spacing */
}

/* Global Settings Start */
.container {
	max-width: 1200px;
	margin: 0 auto;
}
p {
	font-weight: 300;
	line-height: 1.5;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Raleway', sans-serif;
}
a {
	text-decoration: none;
}
img {
	width: 100%;
	height: 100%;
}

.section-gap {
	padding: 150px 0;
}

.button {
	background: #242222;
	color: #f4f4f4;
	padding: 15px 20px;
	border-radius: 3px;
	font-size: 1rem;
	letter-spacing: 2px;
	transition: 0.3s;
	margin-top: 20px;
	display: inline-block;
}

.title-heading {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	color: #333333;
}
.title {
	font-size: 4rem;
	text-transform: uppercase;
	color: #333333;
}
/* Global Settings End */


/* HEADER SECTION START */
.header {
	position: fixed;
	z-index: 999;
	overflow: hidden;
	top: 0;
	left: 0;
	height: 90px;
	width: 100%;
	background: transparent;
	padding: 0px 40px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	transition: 0.3s;
}
.header .header__logo {
	font-size: 3rem;
	font-weight: 700;
	color: #ffffff;
}
.header .header__nav {
	padding-top: 10px;
}
.header .header__nav li {
	padding: 0 10px;
	display: inline-block;
}
.header .header__nav li a {
	font-size: 1rem;
	text-transform: uppercase;
	color: #ffffff;
	transition: 0.3s;
}
.header .header__nav li a:last-child {
	padding-right: 0px;
}
.header .header__nav li a:hover {
	color: #129637;
}

.header__hamburger {
	padding: 10px;
	cursor: pointer;
	display: none;
	opacity: 0;
	visibility: hidden;
}
.mobile__menu {
	display: none;
}
.header--sticky {
	background: #f4f4f4;
	height: 70px;
	color:#333333;
	-webkit-box-shadow: 1px 10px 14px -4px #747474; 
	box-shadow: 1px 10px 14px -4px #747474;
}

/* Sticky Header Start */
.header--sticky .header__logo {
	color: #333333;
}
.header--sticky .header__nav li a {
	color: #333333;
}
.header--sticky .header__nav li a:hover {
	color: #129637;
}
/* Sticky Header End */

/* Header End */

/* Email Modal Start */
.email-modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
	z-index: 1000;
  background:rgba(0,0,0,.7);
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  transition:  .3s ease-in-out;
  opacity: 0;
}
.email-modal--visible {
  visibility: visible;
  opacity: 1;
}
.email-modal__container {
	background: #ffffff;
	max-width: 700px;
	width: 100%;
	display: flex;
	position: relative;
	border-radius: 5px;
	overflow: hidden;
}
.email-modal__close-btn {
	position: absolute;
	top: 5px;
	right: 5px;
	background: #129637;
	padding: 15px;
	cursor: pointer;
	height: 40px;
	width: 40px;
	border-radius: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
}
.email-modal .fa-times {
	color: #ffffff;
	font-size: 1.5rem;
}
.email-modal__info {
	padding: 15px;
	width: 100%;
}
.email-modal__info .email-modal__title {
	color: #333333;
	font-size: 2.3rem;
	font-weight: 700;
	text-align: center;
	margin-bottom: 2rem;
}
.email-modal__info h2 {
	color: #333333;
	font-size: 2rem;
	font-weight: 500;
	margin-bottom: 1.2rem;
}
.email-modal__message {
	font-weight: 300;
	font-size: 1.2rem;
	line-height: 1.5;
	margin-bottom: 1.2rem;
}
.email-modal__message--highlight {
	color: #129637;
	font-weight: 700;
}
.email-modal__error-message {
	font-size: .9rem;
	margin-bottom: .3rem;
	transition: .3 ease-in-out;
	color: #cc0200;
	display: none;
}
.email-modal__error-message--active {
	display: block;
	transition: .3 ease-in-out;
}
.email-modal__form-group {
	background:rgba(0, 0, 0, 0.1);
	display: flex;
	padding: 0px;
	max-width: 500px;
	margin-bottom: 1.2rem;
}
.email-modal__input {
	font-size: .9rem;
	width: 100%;
	height: 35px;
	padding-left: 7px;
}
.email-modal__input--error {
	border: 2px solid #cc0200;
}
.email-modal__button {
	width: 100px;
	background-color: #129637;
	color: #ffffff;
	cursor: pointer;
	border: none;

}
.email-modal__decline-offer {
	color: #333333;
	cursor: pointer;
	margin-bottom: 1.2rem;
	font-size: .9rem;
	transition: .2s;
}
.email-modal__thank-you {
	position: absolute;
	height: 100%;
	width: 100%;
	background: rgba(18, 150, 56, 1.0);
	background: -webkit-linear-gradient(bottom right, rgba(18, 150, 56, 1.0), rgba(232, 235, 229, 1.0));
	background: -moz-linear-gradient(bottom right, rgba(18, 150, 56, 1.0), rgba(232, 235, 229, 1.0));
	background: linear-gradient(to top left, rgba(18, 150, 56, 1.0), rgba(232, 235, 229, 1.0));
	transform: translate3d(100%,0,0);
	transition: transform .3s ease-in-out;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	color: #ffffff;
}
.email-modal__thank-you--success {
	transform: translate3d(0,0,0);
}
.thank-you-title {
	font-size: 2rem;
	font-weight: 900;
	margin-bottom: 1.2rem;
	opacity: 0;
	transition: opacity .3s ease-in-out .4s;
}
.thank-you-text {
	font-size: 1rem;
	font-weight: 300;
	opacity: 0;
	transition: opacity .3s ease-in-out .7s;
}
.email-modal__thank-you--success .thank-you-title, .email-modal__thank-you--success .thank-you-text {
	opacity: 1;
} 
/* Email Modal End */



/* Hero Start */
.hero {	
	position: relative;
	width: 100%;
	height: 100vh;
	overflow: hidden;
}
.hero .hero__bg {
	position: absolute;
	object-fit: cover;
	object-position: center;
	height: 100%;
	width: 100%;
	z-index: 1;
}
.hero .hero__content-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 2;
	background:rgba(0, 0, 0, 0.1);
	display: flex;
	justify-content: center;
	align-items: center;
}
.hero .hero__content-container .hero__info {
	text-align: center;
	max-width: 700px;
}
.hero .hero__content-container .hero__title {
	font-size: 4rem;
	color: #f4f4f4;
}
.hero .hero__content-container .hero__paragraph {
	font-size: 1.2rem;
	padding: 10px 0px;
	color: #f4f4f4;
}
.hero .hero__content-container .button--hero {
	background: #cc0200;
	color: #f4f4f4;
}
/* ... */

